Notifications working right, theme changes working well and bootstrapper tidied up.

--- a/App.xaml
+++ b/App.xaml
@@ -20,6 +20,7 @@
                     <converters:IntThresholdConverter x:Key="IntThreshold"/>
                     <converters:MultiBoolToVisibilityConverter x:Key="MultiBoolToVisibility"/>
                     <converters:CachedUrlImageConverter x:Key="CachedUrlImage"/>
+                    <converters:BooleanToStringConverter x:Key="BooleanToString"/>
                 </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
