--- a/Features/Calendar/CalendarRootView.xaml
+++ b/Features/Calendar/CalendarRootView.xaml
@@ -30,13 +30,16 @@
             Margin="5"
             Padding="{adonisUi:Space 2, 0}">
         <UniformGrid Rows="1" HorizontalAlignment="Left">
+            <!-- <ToggleButton Style="{DynamicResource {x:Static adonisUi:Styles.ToolbarToggleButton}}" -->
+            <!--               Content="Show Previous Races" -->
+            <!--               IsChecked="{Binding ShowPreviousRaces}"/> -->
             <Button Style="{DynamicResource {x:Static adonisUi:Styles.AccentToolbarButton}}"
-                    Content="{Binding ShowPreviousRaces, Converter={StaticResource BooleanToString}, ConverterParameter=Showing Previous Races|Hiding Previous Races}" 
+                    Content="{Binding ShowPreviousRaces, Converter={StaticResource BooleanToString}, ConverterParameter=Showing Previous Races|Hiding Previous Races}"
+                    MinWidth="200"
                     Command="{s:Action ToggleShowPreviousRaces}"/>
             <Button Style="{DynamicResource {x:Static adonisUi:Styles.AccentToolbarButton}}"
                     Content="{Binding EnableNotifications, Converter={StaticResource BooleanToString}, ConverterParameter=Notifications Enabled|Notifications Disabled}"
                     Command="{s:Action ToggleEnableNotifications}"/>
-            <Button Command="{s:Action TestSwitchTheme}"/>
         </UniformGrid>
     </Border>
     <Grid Grid.Row="1" Margin="0 10 0 10">
