--- a/Features/Standings/StandingsTableView.xaml
+++ b/Features/Standings/StandingsTableView.xaml
@@ -1,21 +1,21 @@
-﻿<ItemsControl x:Class="F1Desktop.Features.Standings.DriverStandingsView"
-              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-              xmlns:local="clr-namespace:F1Desktop.Features.Standings"
-              xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
-              xmlns:s="https://github.com/canton7/Stylet"
-              mc:Ignorable="d"
-              d:DataContext="{d:DesignInstance local:DriverStandingsViewModel}"
-              ItemsSource="{Binding Drivers}">
-    <ItemsControl.ItemTemplate>
+﻿<ItemsControl x:Class="F1Desktop.Features.Standings.StandingsTableView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:local="clr-namespace:F1Desktop.Features.Standings"
+             xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
+             xmlns:s="https://github.com/canton7/Stylet"
+             mc:Ignorable="d"
+             d:DataContext="{d:DesignInstance local:StandingsTableViewModel}"
+             ItemsSource="{Binding Standings}">
+        <ItemsControl.ItemTemplate>
         <DataTemplate>
             <Border x:Name="Border"
                     Margin="{adonisUi:Space 1, 0.2}"
                     Padding="{adonisUi:Space 1, 1}"
                     CornerRadius="8"
-                    MouseLeftButtonDown="{s:Action DriverClicked}"
+                    MouseLeftButtonDown="{s:Action OpenWiki}"
                     s:View.ActionTarget="{Binding}">
                 <Grid UseLayoutRounding="True">
                     <Grid.ColumnDefinitions>
