--- a/Styles/CountdownElement.xaml
+++ b/Styles/CountdownElement.xaml
@@ -9,11 +9,11 @@
             <system:Double x:Key="OuterRadius">50</system:Double>
             <system:Double x:Key="InnerRadius">40</system:Double>
             <Point x:Key="Point" X="{StaticResource OuterRadius}" Y="{StaticResource OuterRadius}" />
-            <converters:IntThresholdConverter x:Key="IntThresholdConverter"/>
+            <converters:IntThresholdConverter x:Key="IntThresholdConverter" />
             <Style TargetType="TextBlock">
-                <Setter Property="HorizontalAlignment" Value="Center"/>
-                <Setter Property="VerticalAlignment" Value="Center"/>
-                <Setter Property="Grid.Column" Value="1"/>
+                <Setter Property="HorizontalAlignment" Value="Center" />
+                <Setter Property="VerticalAlignment" Value="Center" />
+                <Setter Property="Grid.Column" Value="1" />
             </Style>
         </Style.Resources>
         <Setter Property="Template">
@@ -26,18 +26,16 @@
                             <Path.Style>
                                 <Style TargetType="{x:Type Path}">
                                     <Style.Triggers>
-                                        <DataTrigger Binding="{Binding CountdownValue, 
-                                        RelativeSource={RelativeSource TemplatedParent}, 
-                                        Converter={StaticResource IntThresholdConverter}, ConverterParameter=0}" 
-                                                     Value="False">
-                                            <Setter Property="Fill" 
+                                        <DataTrigger
+                                            Binding="{Binding IsLightOut, RelativeSource={RelativeSource TemplatedParent}}"
+                                            Value="True">
+                                            <Setter Property="Fill"
                                                     Value="{DynamicResource {x:Static adonisUi:Brushes.Layer1BackgroundBrush}}" />
                                         </DataTrigger>
-                                        <DataTrigger Binding="{Binding CountdownValue, 
-                                        RelativeSource={RelativeSource TemplatedParent}, 
-                                        Converter={StaticResource IntThresholdConverter}, ConverterParameter=0}" 
-                                                     Value="True">
-                                            <Setter Property="Fill" 
+                                        <DataTrigger
+                                            Binding="{Binding IsLightOut, RelativeSource={RelativeSource TemplatedParent}}"
+                                            Value="False">
+                                            <Setter Property="Fill"
                                                     Value="{DynamicResource {x:Static adonisUi:Brushes.ErrorBrush}}" />
                                         </DataTrigger>
                                     </Style.Triggers>
@@ -60,22 +58,22 @@
                         </Path>
                         <Grid>
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="1*"/>
-                                <ColumnDefinition Width="Auto"/>
-                                <ColumnDefinition Width="1*"/>
+                                <ColumnDefinition Width="1*" />
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="1*" />
                             </Grid.ColumnDefinitions>
                             <Grid.RowDefinitions>
-                                <RowDefinition Height="1*"/>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="1*"/>
+                                <RowDefinition Height="1*" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="1*" />
                             </Grid.RowDefinitions>
-                            <TextBlock Text="{Binding CountdownValue, RelativeSource={RelativeSource TemplatedParent}}" 
+                            <TextBlock Text="{Binding CountdownValue, RelativeSource={RelativeSource TemplatedParent}}"
                                        Grid.Row="1"
-                                       Grid.Column="1"/>
+                                       Grid.Column="1" />
                             <TextBlock Text="{Binding DisplayText, RelativeSource={RelativeSource TemplatedParent}}"
                                        Grid.Row="2"
-                                       Grid.Column="1"/>
+                                       Grid.Column="1" />
                         </Grid>
                     </Grid>
                 </ControlTemplate>
