--- a/Features/Standings/StandingsTableView.xaml
+++ b/Features/Standings/StandingsTableView.xaml
@@ -26,7 +26,8 @@
                         <ColumnDefinition Width="Auto" MinWidth="{adonisUi:Space 4}" />
                     </Grid.ColumnDefinitions>
                     <TextBlock Grid.Column="0"
-                               Text="{Binding Position}" />
+                               Text="{Binding Position}"
+                               FontWeight="Bold"/>
                     <Image Grid.Column="1"
                            Source="{Binding CountryCode, Converter={StaticResource CountryIdToFlagImageSource}}"
                            Width="20"
@@ -43,7 +44,8 @@
                                HorizontalAlignment="Right" />
                     <TextBlock Grid.Column="4"
                                Text="{Binding Points}"
-                               HorizontalAlignment="Right" />
+                               HorizontalAlignment="Right"
+                               FontWeight="Bold"/>
                 </Grid>
                 <Border.Style>
                     <Style>
