--- a/Features/Root/WindowView.xaml
+++ b/Features/Root/WindowView.xaml
@@ -8,6 +8,7 @@
                        xmlns:s="https://github.com/canton7/Stylet"
                        xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
                        xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+                       xmlns:system="clr-namespace:System;assembly=System.Runtime"
                        mc:Ignorable="d"
                        d:DataContext="{d:DesignInstance local:WindowViewModel}"
                        Title="F1 Desktop"
@@ -18,47 +19,73 @@
                        WindowState="{Binding UserState, Mode=TwoWay}"
                        MinWidth="900"
                        MinHeight="750"
+                       PlaceTitleBarOverContent="True"
+                       IconVisibility="Collapsed"
+                       TitleVisibility="Collapsed"
                        FontFamily="{StaticResource F1Font}">
+    <controls:AdonisWindow.TitleBarContent>
+        <Grid MinHeight="{adonisUi:Space 3}">
+            <!-- <TextBlock FontSize="22"  -->
+            <!--            Text="F1 Desktop" -->
+            <!--            FontWeight="Bold" -->
+            <!--            Foreground="{DynamicResource {x:Static adonisUi:Brushes.AccentBrush}}"/> -->
+        </Grid>
+    </controls:AdonisWindow.TitleBarContent>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="200" />
-            <ColumnDefinition />
+            <ColumnDefinition Width="Auto" MinWidth="{adonisUi:Space 25}" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-        <ListBox Grid.Column="0"
-                 ItemsSource="{Binding Features}"
-                 SelectedItem="{Binding ActiveViewModel}"
-                 ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                 ScrollViewer.VerticalScrollBarVisibility="Disabled">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <Grid Margin="{adonisUi:Space 0, 2}">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
-                        <iconPacks:PackIconMaterial Grid.Column="0"
-                                                    Kind="{Binding Icon}"
-                                                    Height="20"
-                                                    Width="20"
-                                                    Margin="{adonisUi:Space 1, 0}"/>
-                        <TextBlock Grid.Column="1"
-                                   Text="{Binding DisplayName}"
-                                   FontSize="20" />
-                    </Grid>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
-        <ContentControl Grid.Column="0"
-                        Panel.ZIndex="-10"
-                        ContentTemplate="{DynamicResource Icons.F1GreyScale}"
-                        Foreground="{DynamicResource {x:Static adonisUi:Brushes.Layer1BorderBrush}}"
-                        Focusable="False"
-                        HorizontalAlignment="Right"
-                        VerticalAlignment="Bottom"
-                        Opacity="0.4"
-                        Width="200"
-                        Height="100" />
-        <ContentControl Grid.Column="1"
-                        s:View.Model="{Binding ActiveViewModel}" />
+        <Border Grid.Column="0"
+                Background="{DynamicResource {x:Static adonisUi:Brushes.Layer2BackgroundBrush}}">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition
+                        Height="{Binding TitleBarActualHeight, RelativeSource={RelativeSource AncestorType={x:Type controls:AdonisWindow}}}" />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <ListBox Grid.Row="1"
+                         ItemsSource="{Binding Features}"
+                         SelectedItem="{Binding ActiveViewModel}"
+                         ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                         ScrollViewer.VerticalScrollBarVisibility="Disabled">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <Grid Margin="{adonisUi:Space 0, 2}">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
+                                <iconPacks:PackIconMaterial Grid.Column="0"
+                                                            Kind="{Binding Icon}"
+                                                            Height="20"
+                                                            Width="20"
+                                                            Margin="{adonisUi:Space 1, 0}" />
+                                <TextBlock Grid.Column="1"
+                                           Text="{Binding DisplayName}"
+                                           FontSize="20" />
+                            </Grid>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+                <ContentControl Grid.Row="1"
+                                Panel.ZIndex="-10"
+                                ContentTemplate="{DynamicResource Icons.F1GreyScale}"
+                                Foreground="{DynamicResource {x:Static adonisUi:Brushes.AccentBrush}}"
+                                Focusable="False"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Bottom"
+                                Width="150"
+                                Margin="0 0 0 15"/>
+            </Grid>
+        </Border>
+        <Grid Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="{Binding TitleBarActualHeight, RelativeSource={RelativeSource AncestorType={x:Type controls:AdonisWindow}}}" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <ContentControl Grid.Row="1"
+                            s:View.Model="{Binding ActiveViewModel}" />
+        </Grid>
     </Grid>
 </controls:AdonisWindow>
