--- a/Features/Settings/CreditsView.xaml
+++ b/Features/Settings/CreditsView.xaml
@@ -1,4 +1,4 @@
-﻿<Grid x:Class="F1Desktop.Features.Settings.SettingsView"
+﻿<UserControl x:Class="F1Desktop.Features.Settings.CreditsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -6,5 +6,7 @@
              xmlns:local="clr-namespace:F1Desktop.Features.Settings"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
-    <TextBlock Text="Settings"/>
-</Grid>
+    <Grid>
+        
+    </Grid>
+</UserControl>
