--- a/Features/Settings/CreditsView.xaml
+++ b/Features/Settings/CreditsView.xaml
@@ -1,12 +1,37 @@
-﻿<UserControl x:Class="F1Desktop.Features.Settings.CreditsView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:F1Desktop.Features.Settings"
-             mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-        
-    </Grid>
-</UserControl>
+﻿<ItemsControl x:Class="F1Desktop.Features.Settings.CreditsView"
+              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+              xmlns:local="clr-namespace:F1Desktop.Features.Settings"
+              xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
+              mc:Ignorable="d"
+              d:DataContext="{d:DesignInstance local:CreditsViewModel}"
+              ItemsSource="{Binding Credits}">
+    <ItemsControl.ItemTemplate>
+        <DataTemplate>
+            <Border Background="{DynamicResource {x:Static adonisUi:Brushes.Layer1BackgroundBrush}}"
+                    CornerRadius="8"
+                    Padding="{adonisUi:Space 2,1}">
+                <Expander>
+                    <Expander.Header>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition />
+                                <ColumnDefinition />
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Text="{Binding Name}" />
+                        </Grid>
+                    </Expander.Header>
+                    <TextBlock Text="{Binding Description}" />
+                </Expander>
+            </Border>
+        </DataTemplate>
+    </ItemsControl.ItemTemplate>
+    <ItemsControl.ItemsPanel>
+        <ItemsPanelTemplate>
+            <StackPanel />
+        </ItemsPanelTemplate>
+    </ItemsControl.ItemsPanel>
+</ItemsControl>
