--- a/App.xaml
+++ b/App.xaml
@@ -24,6 +24,8 @@
                     <converters:MultiBoolToVisibilityConverter x:Key="MultiBoolToVisibility"/>
                     <converters:CachedUrlImageConverter x:Key="CachedUrlImage"/>
                     <converters:BooleanToStringConverter x:Key="BooleanToString"/>
+                    <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibility"/>
+                    <converters:InverseBooleanToVisibilityConverter x:Key="InverseBooleanToVisibility"/>
                     <flags:CountryIdToFlagImageSourceConverter x:Key="CountryIdToFlagImageSource"/>
                 </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
