--- a/Features/Settings/SettingsRootView.xaml
+++ b/Features/Settings/SettingsRootView.xaml
@@ -1,45 +1,51 @@
 ﻿<Grid x:Class="F1Desktop.Features.Settings.SettingsRootView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:F1Desktop.Features.Settings"
-             xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
-             xmlns:s="https://github.com/canton7/Stylet"
-             mc:Ignorable="d"
-             d:DataContext="{d:DesignInstance local:SettingsRootViewModel}">
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:local="clr-namespace:F1Desktop.Features.Settings"
+      xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
+      xmlns:s="https://github.com/canton7/Stylet"
+      mc:Ignorable="d"
+      x:Name="SettingsGrid"
+      d:DataContext="{d:DesignInstance local:SettingsRootViewModel}">
     <Grid.Resources>
         <Style x:Key="HeaderStyle" TargetType="TextBlock">
-            <Setter Property="HorizontalAlignment" Value="Center"/>
-            <Setter Property="FontSize" Value="16"/>
-            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="HorizontalAlignment" Value="Center" />
+            <Setter Property="FontSize" Value="16" />
+            <Setter Property="FontWeight" Value="Bold" />
         </Style>
     </Grid.Resources>
     <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="1*"/>
-        <ColumnDefinition Width="1*"/>
+        <ColumnDefinition Width="1*" />
+        <ColumnDefinition Width="1*" />
     </Grid.ColumnDefinitions>
     <Grid.RowDefinitions>
-        <RowDefinition Height="Auto"/>
-        <RowDefinition Height="*"/>
+        <RowDefinition Height="Auto" />
+        <RowDefinition Height="*" />
     </Grid.RowDefinitions>
-    <TextBlock Grid.Row="0" Grid.Column="0" Text="Settings" Style="{DynamicResource HeaderStyle}"/>
+    <TextBlock Grid.Row="0" Grid.Column="0" Text="Settings" Style="{DynamicResource HeaderStyle}" />
     <StackPanel Grid.Row="1" Grid.Column="0">
         <StackPanel.Resources>
             <Style TargetType="TextBlock">
-                <Setter Property="DockPanel.Dock" Value="Left"/>
-                <Setter Property="Margin" Value="{adonisUi:Space 1, 1}"/>
+                <Setter Property="DockPanel.Dock" Value="Left" />
+                <Setter Property="Margin" Value="{adonisUi:Space 1, 1}" />
             </Style>
             <Style TargetType="DockPanel">
-                <Setter Property="Margin" Value="{adonisUi:Space 1, 1}"/>
+                <Setter Property="Margin" Value="{adonisUi:Space 1, 1}" />
             </Style>
         </StackPanel.Resources>
         <DockPanel>
-            <TextBlock Text="Enable Light Theme"/>
+            <TextBlock Text="Enable Light Theme" />
             <ToggleButton Style="{DynamicResource {x:Static adonisUi:Styles.ToggleSwitch}}"
-                          IsChecked="{Binding IsLight}"/>
+                          IsChecked="{Binding IsLight}" />
+        </DockPanel>
+        <DockPanel>
+            <TextBlock Text="Use 24 Hour Clock" />
+            <ToggleButton Style="{DynamicResource {x:Static adonisUi:Styles.ToggleSwitch}}"
+                          IsChecked="{Binding Use24HourClock}" />
         </DockPanel>
     </StackPanel>
-    <TextBlock Grid.Row="0" Grid.Column="1" Text="Credits" Style="{DynamicResource HeaderStyle}"/>
-    <ContentControl Grid.Row="1" Grid.Column="1" s:View.Model="{Binding Credits}"/>
+    <TextBlock Grid.Row="0" Grid.Column="1" Text="Credits" Style="{DynamicResource HeaderStyle}" />
+    <ContentControl Grid.Row="1" Grid.Column="1" s:View.Model="{Binding Credits}" />
 </Grid>
