--- a/Features/Calendar/RaceView.xaml
+++ b/Features/Calendar/RaceView.xaml
@@ -11,6 +11,7 @@
           xmlns:controls="clr-namespace:F1Desktop.Controls"
           xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
           xmlns:system="clr-namespace:System;assembly=System.Runtime"
+          xmlns:misc="clr-namespace:F1Desktop.Misc"
           mc:Ignorable="d"
           d:DataContext="{d:DesignInstance local:RaceViewModel}"
           Style="{StaticResource {x:Type Expander}}"
@@ -106,16 +107,13 @@
                             </Grid.ColumnDefinitions>
                             <controls:HighlightableTextBlock Grid.Column="0"
                                                              Text="{Binding Name}" />
-                            <controls:HighlightableTextBlock Grid.Column="1"
-                                                             Text="{Binding SessionTime.LocalDateTime, StringFormat={}{0:ddd\, d MMMM \-}}"
-                                                             HorizontalAlignment="Right" />
                             <controls:HighlightableTextBlock Grid.Column="2"
                                                              HorizontalAlignment="Right"
-                                                             Text="{Binding SessionTime.LocalDateTime, StringFormat={}{0: HH\:mm}}"
+                                                             Text="{Binding SessionTime.LocalDateTime, StringFormat={x:Static misc:Constants.LongTimeFormat24Hour}}"
                                                              Visibility="{Binding DataContext.Use24HourClock, RelativeSource={RelativeSource FindAncestor, AncestorType=Expander}, Converter={StaticResource BooleanToVisibility}, Mode=TwoWay}"/>
                             <controls:HighlightableTextBlock Grid.Column="2"
                                                              HorizontalAlignment="Right"
-                                                             Text="{Binding SessionTime.LocalDateTime, StringFormat={}{0: hh\:mmtt}}" 
+                                                             Text="{Binding SessionTime.LocalDateTime, StringFormat={x:Static misc:Constants.LongTimeFormat12Hour}}" 
                                                              Visibility="{Binding DataContext.Use24HourClock, RelativeSource={RelativeSource FindAncestor, AncestorType=Expander}, Converter={StaticResource InverseBooleanToVisibility}, Mode=TwoWay}"/>
                         </Grid>
                     </Grid>
