--- a/Features/News/NewsItemView.xaml
+++ b/Features/News/NewsItemView.xaml
@@ -1,26 +1,76 @@
-﻿<Grid x:Class="F1Desktop.Features.News.NewsItemView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:F1Desktop.Features.News"
-             mc:Ignorable="d"
-             d:DataContext="{d:DesignInstance local:NewsItemViewModel}"
-             Margin="10">
-    <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="Auto"/>
-        <ColumnDefinition Width="*"/>
-    </Grid.ColumnDefinitions>
-    <Image Grid.Column="0" Source="{Binding Image, Converter={StaticResource CachedUrlImage}, IsAsync=True}" 
-           Width="50" 
-           Height="50"
-           Margin="5"/>
-    <Grid Grid.Column="1">
-        <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition/>
-        </Grid.RowDefinitions>
-        <TextBlock Grid.Row="0" Text="{Binding Title}" FontSize="16" FontWeight="Bold" TextWrapping="Wrap"/>
-        <TextBlock Grid.Row="1" Text="{Binding Text}" TextWrapping="Wrap"/>
+﻿<Border x:Class="F1Desktop.Features.News.NewsItemView"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:local="clr-namespace:F1Desktop.Features.News"
+        xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
+        xmlns:s="https://github.com/canton7/Stylet"
+        xmlns:misc="clr-namespace:F1Desktop.Misc"
+        xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+        mc:Ignorable="d"
+        d:DataContext="{d:DesignInstance local:NewsItemViewModel}"
+        Margin="{adonisUi:Space 1, 0.5}"
+        CornerRadius="8"
+        Padding="{adonisUi:Space 2, 2}"
+        BorderBrush="{DynamicResource {x:Static adonisUi:Brushes.AccentBrush}}"
+        MouseLeftButtonDown="{s:Action OpenArticle}">
+    <Border.Style>
+        <Style TargetType="Border">
+            <Setter Property="Background" Value="{DynamicResource {x:Static adonisUi:Brushes.Layer1BackgroundBrush}}" />
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background"
+                            Value="{DynamicResource {x:Static adonisUi:Brushes.Layer1HighlightBrush}}" />
+                    <Setter Property="BorderThickness" Value="5 0 5 0" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </Border.Style>
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="{adonisUi:Space 10}" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <Image Grid.Column="0" Source="{Binding Image, Converter={StaticResource CachedUrlImage}, IsAsync=True}"
+               Visibility="{Binding Image, Converter={StaticResource NullToVisibility}}"
+               RenderOptions.BitmapScalingMode="HighQuality"
+               Width="50"
+               Height="50"
+               VerticalAlignment="Center"
+               HorizontalAlignment="Center"
+               ToolTip="{Binding ProviderName}"
+               ToolTipService.InitialShowDelay="0"/>
+        <iconPacks:PackIconMaterial Grid.Column="0"
+                                    Kind="Newspaper"
+                                    Visibility="{Binding Image, Converter={StaticResource InverseNullToVisibility}}"
+                                    Width="50"
+                                    Height="50"
+                                    Opacity="0.4"
+                                    VerticalAlignment="Center"
+                                    HorizontalAlignment="Center"
+                                    ToolTip="{Binding ProviderName}"
+                                    ToolTipService.InitialShowDelay="0"/>
+        <Grid Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <TextBlock Grid.Row="0"
+                       Text="{Binding Title}" FontSize="16" FontWeight="Bold" TextWrapping="Wrap" />
+            <TextBlock Grid.Row="1"
+                       Text="{Binding Text}" TextWrapping="Wrap" />
+            <TextBlock Grid.Row="2"
+                       Text="{Binding Published, StringFormat={x:Static misc:Constants.LongTimeFormat24Hour}}"
+                       Visibility="{Binding Use24HourClock, Converter={StaticResource BooleanToVisibility}}"
+                       HorizontalAlignment="Right"
+                       FontWeight="Bold" />
+            <TextBlock Grid.Row="2"
+                       Text="{Binding Published, StringFormat={x:Static misc:Constants.LongTimeFormat12Hour}}"
+                       Visibility="{Binding Use24HourClock, Converter={StaticResource InverseBooleanToVisibility}}"
+                       HorizontalAlignment="Right"
+                       FontWeight="Bold" />
+        </Grid>
     </Grid>
-</Grid>
+</Border>
