--- a/Features/Root/WindowView.xaml
+++ b/Features/Root/WindowView.xaml
@@ -91,7 +91,7 @@
                                                    Duration="0:0:0.25"
                                                    HorizontalAlignment="Stretch"
                                                    HorizontalContentAlignment="Stretch"
-                                                   s:View.Model="{Binding ActiveViewModel}" />
+                                                   s:View.Model="{Binding ActiveViewModel, IsAsync=True}" />
         </Grid>
     </Grid>
 </controls:AdonisWindow>
